1 section & menu left

--- a/HTML/css/main.css
+++ b/HTML/css/main.css
@@ -430,6 +430,7 @@ h1, h2, h3, h4, h5, h6 {line-height: 1.2em; }
 .font-red{color: #ff0000 !important}
 .font-dark{color: #363636 !important}
 .title-right{margin-right: -15px;}
+.ml-ul{margin-left:1rem}
 .contact-icon{
   max-width: 60px;
   display: block;
